test: reuse already present test questionnaire